# ros_darknet_yolov4

./: README.md  文本文档.txt
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/darknet/: coordinate.h
devel/lib/darknet/: opencv_dnn-video.py
devel/lib/pkgconfig/: darknet.pc  dingyue.pc  yolov5.pc
devel/lib/python3/dist-packages/darknet/msg/: __init__.py  _coordinate.py
devel/lib/yolov5/: export.py  main.py  train.py  window.py
devel/share/common-lisp/ros/darknet/msg/: _package.lisp  _package_coordinate.lisp  coordinate.lisp  darknet-msg.asd
devel/share/darknet/cmake/: darknet-msg-paths.cmake  darknetConfig.cmake
devel/share/dingyue/cmake/: dingyueConfig.cmake
devel/share/gennodejs/ros/darknet/msg/: _index.js  coordinate.js
devel/share/roseus/ros/darknet/: manifest.l
devel/share/roseus/ros/darknet/msg/: coordinate.l
devel/share/yolov5/cmake/: yolov5Config.cmake
src/darknet/: CMakeLists.txt
src/darknet/msg/: coordinate.msg
src/darknet/scripts/: opencv_dnn-video.py
src/dingyue/: CMakeLists.txt
src/dingyue/scripts/: dy.py
src/dingyue/scripts/qwe/: fab.py
src/lakibeam1/: .WeDrive  CMakeLists.txt  laki_start.sh  package.xml  readme.md
src/lakibeam1/include/: .WeDrive  data_type.h  remote.h
src/lakibeam1/launch/: .WeDrive  lakibeam1_pcd.launch  lakibeam1_pcd_dual_lidar.launch  lakibeam1_pcd_dual_lidar_view.launch  lakibeam1_pcd_view.launch  lakibeam1_scan.launch  lakibeam1_scan_dual_lidar.launch  lakibeam1_scan_dual_lidar_view.launch  lakibeam1_scan_view.launch  lakibeam1_scan_view1.launch  lakibeam1_scan_view2.launch
src/lakibeam1/rviz/: .WeDrive  lakibeam1_pcd.rviz  lakibeam1_pcd_dual.rviz  lakibeam1_scan.rviz  lakibeam1_scan_dual.rviz  rviz_scan.rviz
src/lakibeam1/src/: .WeDrive  LakiBeamUDP.cpp  LakiBeamUDP.h  lakibeam1_pcd.cpp  lakibeam1_scan.cpp  remote.cpp
src/te/: CMakeLists.txt  package.xml
src/te/include/te/: serial_write.h
src/te/scripts/: add.py  add_dict.py  add_dict_ser _kem.py  add_dict_ser _kem_copy.py  add_dict_ser.py  add_ser.py  add_ser1.py  add_ser1_add.py  add_ser_gai.py  add_ser_kem.py  uart.py
src/te/src/: add_ser copy.cpp  add_ser.cpp  leida.cpp  serial_write.cpp
